apps/_decom/rook-ceph/route/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-http
  namespace: rook-ceph
spec:
  parentRefs:
  - kind: Gateway
    name: shared-default-gateway
    namespace: default
    sectionName: shared-https
  hostnames:
  - ceph.apps.timgiertz.com
  rules:
  - matches:
    backendRefs:
    - name: rook-ceph-mgr-dashboard
      port: 80
---
